--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
     <name>Pom sorter</name>
     <description>Sorts contents of maven project descriptor</description>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <vendor email="contact@it-crowd.com.pl" url="http://it-crowd.com.pl">IT Crowd</vendor>
 
     <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
@@ -27,6 +27,9 @@
     <change-notes>
         <![CDATA[
         <ul>
+            <li>1.0.4<ul>
+                <li>NPE on project open</li>
+            </ul></li>
             <li>1.0.3<ul>
                 <li>Added default sorting mode for "dependencies"</li>
             </ul></li>
