--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,8 @@
-<idea-plugin version="2">
+<idea-plugin version="2" url="https://github.com/it-crowd/pom-sorter">
     <name>Pom sorter</name>
     <description>Sorts contents of maven project descriptor</description>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
+    <category>Formatting</category>
     <vendor email="contact@itcrowd.pl" url="http://itcrowd.pl" logo="/icons/pom-sorter-32x32.png">IT Crowd</vendor>
 
     <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
@@ -27,8 +28,12 @@
     <change-notes>
         <![CDATA[
         <ul>
+            <li>1.0.6-SNAPSHOT<ul>
+                <li>Prevent removing tag attributes</li>
+                <li>Modify icons</li>
+            </ul></li>
             <li>1.0.5<ul>
-                <li>Repackag from pl.com.it_crowd to pl.itcrowd</li>
+                <li>Repackage from pl.com.it_crowd to pl.itcrowd</li>
                 <li>Add icons</li>
             </ul></li>
             <li>1.0.4<ul>
