--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/it-crowd/pom-sorter">
     <name>Pom sorter</name>
     <description>Sorts contents of maven project descriptor</description>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.0.7</version>
     <category>Formatting</category>
     <vendor email="contact@itcrowd.pl" url="http://itcrowd.pl" logo="/icons/pom-sorter-32x32.png">IT Crowd</vendor>
 
@@ -27,7 +27,7 @@
     <change-notes>
         <![CDATA[
         <ul>
-            <li>1.0.7-SNAPSHOT<ul>
+            <li>1.0.7<ul>
                 <li>#6 not open settings page</li>
                 <li>#5 Sorting should be done asynchronously </li>
                 <li>#4 Expending children of not sorted tag</li>
