--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/it-crowd/pom-sorter">
     <name>Pom sorter</name>
     <description>Sorts contents of maven project descriptor</description>
-    <version>1.0.10</version>
+    <version>1.0.11-SNAPSHOT</version>
     <category>Formatting</category>
     <vendor email="contact@itcrowd.pl" url="http://itcrowd.pl" logo="/icons/pom-sorter-32x32.png">IT Crowd</vendor>
 
@@ -27,6 +27,8 @@
     <change-notes>
         <![CDATA[
         <ul>
+            <li>1.0.11-SNAPSHOT<ul>
+            </ul>
             <li>1.0.10<ul>
                 <li>#15 Unordered TagSortingSetting elements make "false changes" in IDEA misc.xml</li>
             </ul>
